<?xml version="1.0"?>
<package>
  <name>dummy_furo</name>
  <version>0.1.0</version>
  <description>The dummy_furo package</description>

  <maintainer email="jyj@futurerobot.co.kr">jyj</maintainer>
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <license>TODO</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/dummy_furo</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rospy_message_converter</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
